test/errhandling/codePathCoverage/tryMissingCase.good
tryMissingCase.chpl:14: In function 'bar':
tryMissingCase.chpl:14: error: control reaches end of function that returns a value
